# procmon_network_application

./: README.md
procmon_remote/: CMakeLists.txt  FileRegistryTrace.cpp  FileRegistryTrace.hpp  HandleDLLInspection.cpp  HandleDLLInspection.hpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  ProcessInfo.cpp  ProcessInfo.hpp  RaspberryProcesses.cpp  RaspberryProcesses.hpp  ServerClient.cpp  ServerClient.hpp  main.cpp
